# rasmara

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  init.md
backend/: Dockerfile  conftest.py  manage.py  pyproject.toml  requirements.txt
backend/apps/boq/: admin.py  apps.py  models.py  services.py  signals.py
backend/apps/boq/api/: serializers.py  urls.py  views.py
backend/apps/boq/services_io/: comparison.py  excel_export.py  excel_import.py  pdf_export.py
backend/apps/boq/templatetags/: boq_filters.py
backend/apps/boq/tests/: test_boq.py
backend/apps/change/: admin.py  apps.py  models.py  services.py
backend/apps/change/api/: serializers.py  urls.py  views.py
backend/apps/contract/: admin.py  apps.py  models.py  services.py
backend/apps/contract/api/: serializers.py  urls.py  views.py
backend/apps/contract/tests/: test_contract.py
backend/apps/core/: admin.py  apps.py  middleware.py  models.py  permissions.py  signals.py
backend/apps/core/api/: auth_views.py  rbac_views.py  serializers.py
backend/apps/core/tests/: test_auth.py
backend/apps/core/urls/: auth.py  rbac.py
backend/apps/master/: admin.py  apps.py  models.py  services.py
backend/apps/master/api/: serializers.py  urls.py  views.py
backend/apps/master/tests/: test_master.py
backend/common/: exceptions.py  models.py  pagination.py  security.py  views.py
backend/rasmara/: asgi.py  celery.py  urls.py  wsgi.py
backend/rasmara/settings/: base.py  dev.py  env.py  prod.py
frontend/: .eslintrc.json  .prettierrc  (+4 more)
(+75 files in other folders)
