[project]
name = "rasmara-backend"
version = "0.1.0"
description = "RASMARA backend - Django + DRF"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "staticfiles", "media"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S", "C4", "T20", "DJ"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (tests pakai assert)
    "DJ001",  # null=True on CharField (kadang sengaja)
    "N806",   # variable in function should be lowercase (DRF style sering UpperCase)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "T20"]
"**/management/commands/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "rasmara.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rasmara.settings.dev"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v --tb=short"
